add style.css and added google logo

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title></title>
+    </head>
         <body>
-           <p>is this wking
-           </p> 
+          <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
         </body>
 </html>
